--- a/Help_FrontEnd/src/index.html
+++ b/Help_FrontEnd/src/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root></app-root>    
+    <app-root></app-root>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDvNk-x66NERvvus-Le-rfHJo0B1Twgkg"></script>
   </body>
 </html>
